Serialize response voor je ze in de log zet

--- a/Clang/RELEASENOTES
+++ b/Clang/RELEASENOTES
@@ -1,6 +1,15 @@
 Release notes
 =============
 
+1.0.3
+-----
+
+*Compatible with CE:* 2.0 2.1
+*Stability:* Stable Build
+*Description:*
+
+* Serializing log data
+
 1.0.2
 -----
 
