Removed string replace, code check for Magento2 2.4 deprecated / deleted classes

--- a/Clang/RELEASENOTES
+++ b/Clang/RELEASENOTES
@@ -1,6 +1,16 @@
 Release notes
 =============
 
+1.0.9
+-----
+
+*Compatible with CE:* 2.2 2.3 2.4
+*Stability:* Stable Build
+*Description:*
+
+* Add possibility to turn off Magento mails with underscores in names
+* Added support for Magento version 2.4
+
 1.0.8
 -----
 
