--- a/Clang/RELEASENOTES
+++ b/Clang/RELEASENOTES
@@ -10,6 +10,7 @@ Release notes
 
 * Add possibility to turn off Magento mails with underscores in names
 * Added support for Magento version 2.4
+* Backwards compatibility: email templates that contain an underscore _ character will have a new endpoint in Canopy Deploy. Contact Canopy Deploy support to have your endpoints updated automatically when updating from an older version.
 
 1.0.8
 -----
