--- a/Clang/RELEASENOTES
+++ b/Clang/RELEASENOTES
@@ -1,5 +1,16 @@
 Release notes
 =============
+1.0.11
+-----
+
+*Compatible with CE:* 2.2 2.3 2.4
+*Stability:* Stable Build
+*Description:*
+
+* The configurable product's attributes by default are added to the simple product, including images.
+To get the pre-1.0.10 behaviour, the execution of the following SQL is required:
+REPLACE INTO 'core_config_data' ('config_id', 'scope', 'scope_id', 'path', 'value') VALUES (null, 'default', 0, 'clang/clang/product_attribute_mapping_mode', '3');
+
 1.0.10
 -----
 
@@ -10,15 +21,6 @@ Release notes
 * The configurable product's attributes are added to the simple product including images.
 The execution of the following SQL is required in order to use the feature in this version:
 REPLACE INTO 'core_config_data' ('config_id', 'scope', 'scope_id', 'path', 'value') VALUES (null, 'default', 0, 'clang/clang/product_attribute_mapping_mode', '2');
-
-1.0.11
------
-
-*Compatible with CE:* 2.2 2.3 2.4
-*Stability:* Stable Build
-*Description:*
-
-* Merge simple with configurable when sending the data to Canopy Deploy
 
 1.0.9
 -----
