--- a/Clang/RELEASENOTES
+++ b/Clang/RELEASENOTES
@@ -1,5 +1,15 @@
 Release notes
 =============
+
+1.0.12
+-----
+
+*Compatible with CE:* 2.2 2.3 2.4
+*Stability:* Stable Build
+*Description:*
+
+* Fixed an issue in the composer.json file
+
 1.0.11
 -----
 
