--- a/Clang/RELEASENOTES
+++ b/Clang/RELEASENOTES
@@ -1,5 +1,14 @@
 Release notes
 =============
+1.0.17
+-----
+
+*Compatible with CE:* 2.2 2.3 2.4
+*Stability:* Stable Build
+*Description:*
+
+* Added new route for fetching products using their unique id
+
 1.0.16
 -----
 
